--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ title: Projects
 <div class="blurb">
 	<h1>Projects</h1>
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 	<tr>
 		<td>
 		<heading>Work</heading>
@@ -15,7 +15,7 @@ title: Projects
 	</table>
 	<table width="100%" align="center" border="0" cellpadding="20">
 	<tr>
-		<td width="25%"><img src="../images/projects/mark6render.png" alt="" width="210" ></td>
+		<td width="25%"><img src="../media/projects/mark6render.png" alt="" width="210" ></td>
 		<td width="75%" valign="top">
 		<p>
 			<papertitle>Mechanical Engineering Intern, Shield AI</papertitle>
@@ -31,7 +31,7 @@ title: Projects
 	</tr>
 
 	<tr>
-		<td width="25%"><img src="../images/projects/nokia.jpg" alt="prl" width="210" ></td>
+		<td width="25%"><img src="../media/projects/nokia.jpg" alt="prl" width="210" ></td>
 		<td width="75%" valign="top">
 		<p>
 			<papertitle>Mechanical Engineering Intern, Microsoft</papertitle>
@@ -40,14 +40,12 @@ title: Projects
 			San Diego, CA
 		<p>
 			I spent a summer at Microsoft (formerly Nokia), working in the Product Design group.
-			<!-- Most of my time was spent breaking and tearing down Nokia products and competitors',
-			and developing test rigs to streamline the process. -->
 		</p>
 		</p>
 		</td>
 	</tr>
 	</table>
-
+ -->
 	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 		<tr>
 			<td>
@@ -55,9 +53,10 @@ title: Projects
 			</td>
 		</tr>
 		</table>
+		
 		<table width="100%" align="center" border="0" cellpadding="20">
 			<tr>
-				<td width="25%"><img src="../images/projects/inria_icra_pic.png" alt="prl" width="210"></td>
+				<td width="25%"><img src="../media/projects/inria_icra_pic.png" alt="prl" width="210"></td>
 				<td width="75%" valign="top">
 				<p>
 					<papertitle>Multi-robot QP controllers for human-humanoid interaction</papertitle>
@@ -75,7 +74,7 @@ title: Projects
 			</tr>
 
 			<tr>
-				<td width="25%"><img src="../images/projects/softleg1.jpg" alt="prl" width="210" ></td>
+				<td width="25%"><img src="../media/projects/softleg1.jpg" alt="prl" width="210" ></td>
 				<td width="75%" valign="top">
 				<p>
 					<papertitle>Multiple DOF Pneumatic Actuator</papertitle>
@@ -91,7 +90,7 @@ title: Projects
 			</tr>
 
 			<tr>
-				<td width="25%"><img src="../images/projects/soft_hand_apple.png" alt="prl" width="210" ></td>
+				<td width="25%"><img src="../media/projects/soft_hand_apple.png" alt="prl" width="210" ></td>
 				<td width="75%" valign="top">
 				<p>
 					<papertitle>Stretchable tactile sensing skin for soft robots</papertitle>
@@ -114,7 +113,7 @@ title: Projects
 		<table width="100%" align="center" border="0" cellpadding="20">
 
 			<tr>
-				<td width="25%"><img src="../images/projects/emvs_office_depth_map.png" width="210" ></td>
+				<td width="25%"><img src="../media/projects/emvs_office_depth_map.png" width="210" ></td>
 				<td width="75%" valign="top">
 				<p>
 					<a href="https://github.com/kazuotani14/EVO">
@@ -128,7 +127,7 @@ title: Projects
 			</tr>
 
 			<tr>
-				<td width="25%"><img src="../images/projects/multi_cozmo.png" width="210" ></td>
+				<td width="25%"><img src="../media/projects/multi_cozmo.png" width="210" ></td>
 				<td width="75%" valign="top">
 				<p>
 					<a href="https://github.com/mrsd16teamd/cozmo_mrdrrt">
@@ -143,7 +142,7 @@ title: Projects
 
 			<tr>
 			<td width="25%">
-				<img src='../images/projects/loco_car.jpg' width="210" >
+				<img src='../media/projects/loco_car.jpg' width="210" >
 			</td>
 			<td valign="top" width="75%">
 				<p>
@@ -162,7 +161,7 @@ title: Projects
 
 			<tr>
 			<td width="25%">
-				<img src='../images/projects/endoscope.jpg' width="210" >
+				<img src='../media/projects/endoscope.jpg' width="210" >
 			</td>
 			<td valign="top" width="75%">
 				<p>
@@ -179,7 +178,7 @@ title: Projects
 		</tr>
 
 		<tr>
-			<td width="25%"><img src="../images/projects/mip2.jpg" alt="prl" width="210" ></td>
+			<td width="25%"><img src="../media/projects/mip2.jpg" alt="prl" width="210" ></td>
 			<td width="75%" valign="top">
 			<p>
 				<papertitle>Control Design for Mobile Inverted Pendulum</papertitle>
@@ -197,7 +196,7 @@ title: Projects
 
 		<tr>
 		<td width="25%">
-			<img src='../images/projects/mae3_1.jpg' width="210" >
+			<img src='../media/projects/mae3_1.jpg' width="210" >
 		</td>
 		<td valign="top" width="75%">
 			<p>
