--- a/projects/mip.html
+++ b/projects/mip.html
@@ -5,7 +5,7 @@ title: Mobile Inverted Pendulum Robot
 <div class="blurb">
 	<h1>Mobile Inverted Pendulum Robot</h1>
 
-<img src="http://kazuotani14.github.io/images/projects/mip.jpg" alt="" align="left" />
+<img src="http://kazuotani14.github.io/media/projects/mip.jpg" alt="" align="left" />
 
 <p>
 This was a project for MAE 143C (Digital Controls) at UCSD.
