--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@ title: Kazuya Otani
 <div class="blurb">
 	<center><h1>Kazuya Otani</h1></center>
 
-	<center><img src="images/personal/shield_profile_pic_cropped.jpeg" style="width:200px;height:220px;"></img></center>
+	<center><img src="media/personal/shield_profile_pic_cropped.jpeg" style="width:200px;height:220px;"></img></center>
+
+  <p>
+
+  I'm a second year Masters student Robotics Institute at Carnegie Mellon. 
+
+  <p>
+
+  My interests are in robot motion planning, control, and machine learning.   
 
 </div><!-- /.blurb -->
