--- a/notes/index.html
+++ b/notes/index.html
@@ -5,8 +5,8 @@ title: Notes
 
 	<h1>{{ page.title }}</h1>
 
-	<ul class="posts">
-	  {% for post in site.posts %}
+	<ul class="notes">
+	  {% for post in site.notes %}
 	    <li><span>
         <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
       </li>
