re-organize notes, update cv and pubs

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@ title: Kazuya Otani
 
   <p>
 
-  I'm a second year Masters student Robotics Institute at Carnegie Mellon. 
+  I'm a second year Masters student Robotics Institute at Carnegie Mellon. I got my BS in Mechanical Engineering from UC San Diego. 
+  <!-- Previously, I worked at Inria, [Shield AI](), Warehouse Innovations, and Microsoft. -->
 
   <p>
 
-  My interests are in robot motion planning, control, and machine learning.   
+  My interests are in robot motion planning, control, and machine learning.    
 
 </div><!-- /.blurb -->
