--- a/publications.html
+++ b/publications.html
@@ -3,6 +3,27 @@ layout: default
 title: Publications
 ---
 
+<h2> Conferences </h2>
+
 <ul> 
-  <li><a href="link">Title</a></li>
+  <li>
+    <b>K. Otani</b>, K. Bouyarmane, K. Ivaldi “Generating Assistive Humanoid Motions for Co-Manipulation Tasks with a Multi-Robot Quadratic Program Controller“ IEEE-RAS International Conference on Robotics and Automation (ICRA). Brisbane, Australia. May 2018. <a href="files/otani_icra_2018.pdf">PDF</a>, <a href="https://youtu.be/OBXF0psbZfE">Video</a> 
+  </li>
+  <br>
+   <li>
+    <b>K. Otani</b>, K. Bouyarmane "Adaptive Whole-Body Manipulation in Human-to-Humanoid Multi-Contact Motion Retargeting",  IEEE-RAS International Conference on Humanoid Robots. Birmingham, England. November 2017. <a href="files/otani_humanoids_2017.pdf">PDF</a>, <a href="https://youtu.be/hl6tFmijlY0">Video</a> 
+  </li>
+</ul> 
+
+<h2> Workshops </h2>
+
+<ul>
+  <li>
+    <b>K. Otani</b>, K. Bouyarmane, S.Ivaldi “Humanoid Control for Collaborative Tasks with Whole-body Human Dynamics Reconstruction”, Workshop:“Human-Humanoid collaboration: the next industrial revolution?” IEEE-RAS International Conference on Humanoid Robots. Birmingham, England. November 2017. <a href="files/otani_humanoidsworkshop_2017.pdf">PDF</a>
+  </li>
+  <br>
+  <li>
+    D. Drotman, J. Friesen, <b>K. Otani</b>, M.T. Tolley "Multiple Degree of Freedom Pneumatic Actuation for an Untethered Soft Robotic Quadruped", Soft Robotics: Actuation, Integration, and Applications Workshop, International Conf. on Robotics and Automation (ICRA). Seattle WA. May 2015. <a href="files/drotman_icra2015_workshop.pdf">PDF</a>
+  </li>
 </ul>
+
