update projects page

--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,9 @@ layout: default
 title: Notes
 ---
 
-	<h1>{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
+
+Notes to help future me (and hopefully some others). 
 
 <h2>Math</h2>
 
