--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Kazuya Otani
 
   <p>
 
-  I'm a second year Masters student Robotics Institute at Carnegie Mellon. I got my BS in Mechanical Engineering from UC San Diego. 
+  I'm an Autonomy Engineer at <a href="https://www.shield.ai/">Shield AI</>. MS Robotics Carnegie Mellon, BS MechEng UCSD.
   <!-- Previously, I worked at Inria, [Shield AI](), Warehouse Innovations, and Microsoft. -->
 
   <p>
