--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title: Kazuya Otani
 
   <p>
 
-  I'm an Autonomy Engineer at <a href="https://www.shield.ai/">Shield AI</a>. <!-- MS Robotic Systems Development Carnegie Mellon, BS MechEng UCSD. --> 
-  <!-- Previously, I worked at Inria, [Shield AI](), Warehouse Innovations, and Microsoft. -->
+  I'm a Behavior/Planning Engineer at Waymo. <!-- MS Robotic Systems Development Carnegie Mellon, BS MechEng UCSD. --> 
+  <!-- Previously, I worked at Inria, Shield AI, Warehouse Innovations, and Microsoft. -->
 
   <p>
 
